# Dango_Infer

./: .gitignore  CMakeLists.txt  README.md  build.sh  command.slurm  rebuild.sh  run.sh  test.sh
cmake/: cuda.cmake  sentencepiece.cmake
dango_infer/inc/base/: alloc.h  base.h  buffer.h  tick.h  utils.h
dango_infer/inc/flashInfer/: decode.cuh  pos_enc.cuh  utils.cuh  vec_dtypes.cuh
dango_infer/inc/kernel/: kernels_interface.h
dango_infer/inc/kernel/cuda/: argmax.cuh  argmax_reduce.cuh  elementwise.cuh  embedding.cuh  matmul.cuh  mha.cuh  parallel_embedding.cuh  reduce_sum.cuh  rmsn.cuh  rope_kernel.cuh  swiglu.cuh
dango_infer/inc/kernel/flashInfer/: single_decode_with_kv_cache.cuh  single_decode_with_kv_cache.h
dango_infer/inc/model/: config.h  llama2.h  llama2_prompt.h  model.h  raw_model_data.h
dango_infer/inc/nccl/: base.h  collective.h
dango_infer/inc/op/: colom_parallel_matmul.h  elementwise.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  parallel_embedding.h  rmsnorm.h  rope.h  row_parallel_matmul.h  swiglu.h
dango_infer/inc/sampler/: argmax_sampler.h  sampler.h
dango_infer/inc/tensor/: tensor.h
dango_infer/src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
dango_infer/src/kernel/: kernels_interface.cpp
dango_infer/src/model/: llama2.cpp  llama2_prompt.cpp  model.cpp  raw_model_data.cpp
dango_infer/src/nccl/: base.cpp  collective.cpp
dango_infer/src/op/: colom_parallel_matmul.cpp  elementwise.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  parallel_embedding.cpp  rmsnorm.cpp  rope.cpp  row_parallel_matmul.cpp  swiglu.cpp
dango_infer/src/op/cuda/: argmax.cu  elementwise.cu  embedding.cu  matmul.cu  mha.cu  parallel_embedding.cu  rmsn.cu  rope_kernel.cu  swiglu.cu
dango_infer/src/op/flashInfer/: single_decode_with_kv_cache.cu
dango_infer/src/sampler/: argmax_sampler.cpp
dango_infer/src/tensor/: tensor.cpp
log/: 18171.err  18172.err  18173.err  18174.err
sampler/simple_chat/: CMakeLists.txt  main.cpp
sampler/test/: CMakeLists.txt  test_main.cpp
sampler/test/unit/model/: test_encode.cpp
tools/: export_llama.py  run.sh
